--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,6 +18,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+input {
+
   color: #000;
 }
 
